--- a/registro.html
+++ b/registro.html
@@ -276,22 +276,6 @@
                </div>
 
             </div>
-            <div class="d-flex align-items-center mt-4">
-               <div>
-                  <span>Ingrese el texto del Captcha:</span>
-               </div>
-               <div class="px-3">
-                  <img src="./images/captcha.jpeg" alt="">
-               </div>
-               <div class="px-3">
-                  <button type="button" class="input-buscar px-3 rounded">
-                     <i class="fas fa-sync-alt"></i>
-                  </button>
-               </div>
-            </div>
-            <div class="w-50 mt-3">
-               <input type="text" class="form-control">
-            </div>
          </form>
 
       </div>
@@ -2755,7 +2739,24 @@
 
          <br><br>
 
-         <button type="submit" class="boton-registro" style="border:none;"><i class="fa fa-check"></i>
+         <div class="d-flex align-items-center mt-4">
+            <div>
+               <span>Ingrese el texto del Captcha:</span>
+            </div>
+            <div class="px-3">
+               <img src="./images/captcha.jpeg" alt="">
+            </div>
+            <div class="px-3">
+               <button type="button" class="input-buscar px-3 rounded">
+                  <i class="fas fa-sync-alt"></i>
+               </button>
+            </div>
+         </div>
+         <div class="w-50 mt-3">
+            <input type="text" class="form-control">
+         </div>
+
+         <button type="submit" class="boton-registro mt-4" style="border:none;"><i class="fa fa-check"></i>
             Registrarse</button>
 
       </form>
