--- a/nosotros.html
+++ b/nosotros.html
@@ -158,7 +158,7 @@
    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+HK:400,500,700&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
 
-   <link rel="stylesheet" href="/css/guiainsdustrial.css">
+   <link rel="stylesheet" href="./css/guiainsdustrial.css">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
       integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
@@ -430,7 +430,7 @@
    </footer>
 
 
-   <script src="/js/nav.js"></script>
+   <script src="./js/nav.js"></script>
    <script>
       function setData(id) {
          var route = 'https://guiaindustrialcomercial.com.py/anuncios/json/:id';
